--- a/application.yml
+++ b/application.yml
@@ -1,11 +1,12 @@
 spring:
-   application:
-     mame: USER-SERVICE
+  application:
+    name: USER-SERVICE
+
 eureka:
-    instance:
-      prefer-ip-address: true
-    client:
-      fetch-registry: true
-      register-with-eureka: true
-      service-url:
-        defaultZone: http://localhost:8761/eureka
+  instance:
+    prefer-ip-address: true
+  client:
+    fetch-registry: true
+    register-with-eureka: true
+    service-url:
+      defaultZone: http://localhost:8761/eureka
